--- a/AssetManager/Views/Home/Contact.cshtml
+++ b/AssetManager/Views/Home/Contact.cshtml
@@ -4,5 +4,5 @@
 <h2>@ViewBag.Title</h2>
 
 <address>
-    <a href="https://github.com/t00">https://github.com/t00</a><br />
+    <a href="https://github.com/speedwellsoftware">https://github.com/speedwellsoftware</a><br />
 </address>
