--- a/AssetManager/Views/Home/Index.cshtml
+++ b/AssetManager/Views/Home/Index.cshtml
@@ -5,26 +5,28 @@
 
 <div class="jumbotron">
     <h1>Asset Manager</h1>
-    <p class="lead">The ASP MVC 5 asset manager example</p>
+    <p class="lead">The crude ASP MVC 5 asset manager</p>
 </div>
 
 <div class="row">
     <h3>Assets</h3>
     <table class="table table-hover table-striped">
         <thead>
-            <td></td>
-            <td><a class="btn btn-success glyphicon glyphicon-plus" href="@Url.Action("Add", "Asset")"></a></td>
+            <th>Name</th>
+            <th>Group</th>
+            <th><a class="btn btn-success" href="@Url.Action("Add", "Asset")">Add</a></th>
         </thead>
         <tbody>
-        @{
-            foreach (var asset in Model.Assets)
-            {
-                <tr>
-                    <td class="col-xs-12">@Html.ActionLink(asset.Name, "View", "Asset", new {assetId = asset.Id}, null)</td>
-                    <td class="col-xs-1"><button class="btn btn-danger glyphicon glyphicon-remove" href="#" data-href="@Url.Action("Delete", "Asset", new {id = asset.Id})" data-toggle="modal" data-target="#confirm-delete"></button></td>
-                </tr>
+            @{
+                foreach (var asset in Model.Assets)
+                {
+                    <tr>
+                        <td class="col-xs-12">@Html.ActionLink(asset.Name, "View", "Asset", new { assetId = asset.Id }, null)</td>
+                        <td class="col-xs-12">@asset.Group.Name</td>
+                        <td class="col-xs-1"><button class="btn btn-danger" href="#" data-href="@Url.Action("Delete", "Asset", new {id = asset.Id})" data-toggle="modal" data-target="#confirm-delete">Remove</button></td>
+                    </tr>
+                }
             }
-        }
         </tbody>
     </table>
     <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -44,7 +46,7 @@
         </div>
     </div>
     <script type="text/javascript">
-        $('#confirm-delete').on('show.bs.modal', function(e) {
+        $('#confirm-delete').on('show.bs.modal', function (e) {
             $(this).find('.btn-danger').attr('href', $(e.relatedTarget).data('href'));
         });
     </script>
