--- a/AssetManager/Views/Shared/_Layout.cshtml
+++ b/AssetManager/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Michal Turecki</p>
+            <p>&copy; @DateTime.Now.Year Speedwell Software Limited</p>
         </footer>
     </div>
 
